# ai-project-austrac

./: .gitignore  README.md
instantinsight/: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  bitbucket-pipelines.yml  pyproject.toml
instantinsight-db/: .env.example  .gitignore  .pre-commit-config.yaml  README.md  alembic.ini  athena_rag_setup_report.json  docker-compose.yml  pyproject.toml  start_up_container.sh
instantinsight-db/alembic/: env.py
instantinsight-db/alembic/versions/: d11b8ed78fb7_add_custom_pgvector_search_functions.py  f74037d15890_create_initial_pgvector_rag_schema.py
instantinsight-db/config/: analyser_definitions.yaml  high_cardinality_columns.yaml
instantinsight-db/examples/AnalyticsConnector/posgresql/: README.md  ibis_postgres_walkthrough.py
instantinsight-db/schemas/: pgvector-cardinality.sql  pgvector-setup.sql
instantinsight-db/scripts/: __init__.py  clear_cache.py  create_cardinality_tables.sh  create_rag_cardinality.py  generate_table_examples.sh  init_cardinality_schema.py  migrate_database.py  schema_logic_stats.py  setup_environment.sh  setup_schema_logic.py  setup_schema_logic.sh  test_chunked_architecture.py  update_analyser_metadata.py
instantinsight-db/src/: __init__.py
instantinsight-db/src/config/: __init__.py  cache_config.py  config.py  database_config.py  environment_config.py  feature_flags.py
instantinsight-db/src/connectors/: analytics_backend.py
instantinsight-db/src/database/: __init__.py  models.py
instantinsight-db/src/rag/: __init__.py  pgvector_rag.py  rag_engine.py
instantinsight-db/src/rag/components/: __init__.py  analyser_metadata.py  chunking_strategies.py  database_manager.py  engine_config.py  error_handling_service.py  sql_generation_service.py
instantinsight-db/src/setup/: __init__.py  analyser_filter.py  config_loader.py  prerequisite_validator.py  setup_orchestrator.py
instantinsight-db/src/training/data/: validated_athena_examples.yaml
instantinsight-db/src/utils/: __init__.py  glue_enricher.py  schema_introspector.py  schema_vectorizer.py  table_agent_utils.py
instantinsight-db/src/utils/vectorizer/: __init__.py  athena_ddl_generator.py  schema_vectorizer_orchestrator.py  sql_example_generator.py  template_loader.py  yaml_data_exporter.py
instantinsight-db/tests/: __init__.py  conftest.py
instantinsight-db/tests/connectors/: test_analytics_backend.py
instantinsight-db/tests/integration/: test_athena_backend.py  test_ibis_migration.py  test_postgres_backend.py
instantinsight-db/tests/scripts/: test_create_rag_cardinality.py
instantinsight-db/tests/src/utils/: test_sql_formatter.py
instantinsight-db/tests/utils/: test_glue_enricher.py  test_schema_introspector.py
instantinsight/examples/: demo_pipeline.py  multiturn_demo_pipeline.py
instantinsight/flask_app/: SESSION_IMPLEMENTATION.md  app.py  modification_handler.py  run_flask.py  visualization_utils.py
instantinsight/flask_app/static/css/: styles.css  theme.css
instantinsight/flask_app/static/js/: app.js
instantinsight/flask_app/templates/: index.html
instantinsight/lambda/: .dockerignore  Dockerfile  Makefile  README.md  lambda_handler.py
instantinsight/lambda/infrastructure/cloudformation/: parameters.json  template.yaml
instantinsight/lambda/scripts/: get-sso-credentials.sh  load-env.sh  run-local-test.sh
instantinsight/scripts/: __init__.py  add_langfuse_model.sh  alembic_update.sh  init_database.py  migrate_database.py  test_universal_executor.py
instantinsight/src/: __init__.py  query_processor.py
instantinsight/src/agents/: __init__.py  intent_clarification_pipeline.py
instantinsight/src/agents/prompt_builders/: __init__.py
instantinsight/src/agents/strand_agents/: __init__.py  model_config.py
instantinsight/src/cache/: __init__.py  semantic_cache.py
instantinsight/src/config/: __init__.py  agent_model_config.py  config.py  database_config.py  feature_flags.py
instantinsight/src/connectors/: __init__.py  analytics_backend.py  database.py
instantinsight/src/evaluation/: __init__.py  rag_evaluator.py
instantinsight/src/evaluation/metrics/: __init__.py  rag_metrics.py
instantinsight/src/guardrails/: __init__.py  sql_security_guardrail.py
instantinsight/src/mcp_server/: __init__.py  server.py
instantinsight/src/rag/: __init__.py  pgvector_rag.py
instantinsight/src/rag/backends/: __init__.py  pgvector_backend.py
instantinsight/src/rag/engines/: __init__.py  engine_factory.py  query_executor.py  rag_engine.py  sql_engine.py  types.py
instantinsight/src/rag/pipeline/: __init__.py  base.py  coordinator.py  handlers.py  stages.py
instantinsight/src/rag/vector_db/: __init__.py  config.py
instantinsight/src/session/: __init__.py  session_store.py
instantinsight/src/training/data/: validated_athena_examples.yaml
instantinsight/src/utils/: __init__.py  bedrock_token_tracker.py  chart_generators.py  cost_accumulator.py  data_processors.py  error_handler.py  langfuse_client.py  model_pricing.py  strand_callback_helper.py  table_agent_utils.py  vis_types.py  vis_util.py
instantinsight/tests/: __init__.py  conftest.py  test_conversation_summarization.py  test_query_processor.py  test_query_processor_async.py
instantinsight/tests/cache/: test_semantic_cache_context.py
instantinsight/tests/data/validation/: custom_analysers_tests.yaml
instantinsight/tests/integration/: README.md  run_evaluation.sh  sql_pipeline_evaluator.py  test_edge_cases.py  test_multi_turn_conversations.py
instantinsight/tests/lambda/: __init__.py  test_lambda_handler.py  test_lambda_integration.py  test_lambda_multi_turn.py
instantinsight/tests/mcp/: __init__.py  test_mcp_client.py
instantinsight/tests/rag/: test_pgvector_rag.py
instantinsight/tests/rag/engines/: test_rag_engine_context.py  test_sql_engine_context.py
instantinsight/tests/rag/pipeline/: test_pipeline_context.py
instantinsight/tests/session/: test_session_store.py
instantinsight/tests/src/: __init__.py
instantinsight/tests/utils/: test_bedrock_token_tracker.py  test_model_pricing.py
(+66 files in other folders)
